manifests/service-mesh/21-demo-gamma-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gamma-web-route
  namespace: cilium-service-mesh-demo
spec:
  parentRefs:
    - group: ""
      kind: Service
      name: web
      port: 80
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: web-v1
          port: 80
          weight: 90
        - name: web-v2
          port: 80
          weight: 10
