manifests/service-mesh/22-demo-gateway-http-hostnetwork.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mesh-gateway-hostnetwork
  namespace: cilium-service-mesh-demo
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 8080
      hostname: mesh-demo.example
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-route-hostnetwork
  namespace: cilium-service-mesh-demo
spec:
  parentRefs:
    - name: mesh-gateway-hostnetwork
  hostnames:
    - mesh-demo.example
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: web-v1
          port: 80
          weight: 90
        - name: web-v2
          port: 80
          weight: 10
