manifests/service-mesh/23-demo-gateway-http-nodeport.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium-nodeport
spec:
  controllerName: io.cilium/gateway-controller
  parametersRef:
    group: cilium.io
    kind: CiliumGatewayClassConfig
    name: cilium-nodeport-config
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mesh-gateway-nodeport
  namespace: cilium-service-mesh-demo
spec:
  gatewayClassName: cilium-nodeport
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: mesh-demo.example
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-route-nodeport
  namespace: cilium-service-mesh-demo
spec:
  parentRefs:
    - name: mesh-gateway-nodeport
  hostnames:
    - mesh-demo.example
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: web-v1
          port: 80
          weight: 90
        - name: web-v2
          port: 80
          weight: 10
